Thu Jun 23 12:39:08 CEST 2011  Johnny Willemsen  <jwillemsen@remedy.nl>

        * etc/*.doxygen
          Disable html help, seems doxygen now disables the search option
          when html help is enabled

Thu Jun 23 13:46:08 CEST 2011  Johnny Willemsen  <jwillemsen@remedy.nl>

        * ACE version 6.0.3 released.

Wed Jun 22 18:01:15 UTC 2011  Jeff Parsons <j.parsons@vanderbilt.edu>

        * Basic_Types.h:
        * CDR_Base.cpp:
        * CDR_Base.h:
        * config-win32-mingw.h:

          Reverted all changes made related to support for long double
          constants in IDL.

Tue Jun 21 18:14:46 UTC 2011  Jeff Parsons <j.parsons@vanderbilt.edu>

        * ace/Basic_Types.h:

          Fixed typo in ACE_LONG_DOUBLE_FORMAT_SPECIFIER_ASCII
          decision tree. Thanks to Phil Mesnier <mesnier_p@ociweb.com>
          for his help in connecting it to scoreboard warnings.

Mon Jun 20 17:39:01 UTC 2011  Jeff Parsons <j.parsons@vanderbilt.edu>

        * ace/Basic_Types.h:

          Another tweak to ACE_LONG_DOUBLE_FORMAT_SPECIFIER_ASCII's
          logic aimed at warnings on FC6, FC8, FC12, and FC15.

Mon Jun 20 17:17:26 UTC 2011  Jeff Parsons <j.parsons@vanderbilt.edu>

        * ace/config-win32-mingw.h:
        * ace/Basic_Types.h:

          - Moved the definition of ACE_LONG_DOUBLE_FORMAT_SPECIFIER_ASCII
            to the MinGW config file.

          - Added #define ACE_CDR_IMPLEMENT_WITH_NATIVE_DOUBLE 1 to
            the MinGW config file, so that, for generated IDL long
            double constants, the argument will agree with the
            print format string. MinGW doesn't support long double
            in the print format.

Fri Jun 17 16:48:29 UTC 2011  Jeff Parsons <j.parsons@vanderbilt.edu>

        * ace/Basic_Types.h:

          Another tweak to ACE_LONG_DOUBLE_FORMAT_SPECIFIER_ASCII's
          conditional definition to eliminate warnings on FC12
          and FC15.
